--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <img id="logo" src="https://iili.io/FvPnHMP.jpg" alt="logo" class="logo-img"> 
      <button id="installBtn" style="
  
-  background-color: #28a745;
+  background-color:;
   color: white;
-  padding: 12px 20px;
+  padding: 2px 2px;
   font-size: 18px;
   border: none;
   border-radius: 8px;
@@ -35,7 +35,7 @@
   z-index: 9999;
   cursor: pointer;
 ">
-  📲 App
+   📲
 </button>
 
     </div>
@@ -125,6 +125,7 @@
 
 </body>
 </html>
+
 
 
 
