--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <div id="popup-welcome" class="popup-overlay" style="display: none;">
   <div class="popup-content">
     <span class="close-btn" onclick="document.getElementById('popup-welcome').style.display='none'">&times;</span>
-    <h2>👋 TAUX DU JOUR !</h2> 
+    <h2>👋 TARIFA DIÁRIA !</h2> 
     <p>Chargement...</p>
     <button class="popup-ok-btn" onclick="document.getElementById('popup-welcome').style.display='none'">OK</button>
   </div>
@@ -125,6 +125,7 @@
 
 </body>
 </html>
+
 
 
 
