--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- En-tête fixe -->
   <div class="fixed-header">
     <div class="logo-container" style="display: flex">
-      <img id="logo" src="https://iili.io/FvPnHMP.jpg" alt="logo" class="logo-img"> 
+      <img id="logo"  class="logo-img"> 
      <button id="installBtn" style="
  
   background-color:;
@@ -119,12 +119,28 @@
   <script src="script.js" defer></script>
   <script src="install.js"></script>
 
+<script>
+  // Remplace par l’URL exacte de ta Web App déployée
+  const webAppUrl = "https://script.google.com/macros/s/AKfycbwoTyj8mpGYPfWCOxszGA-SPYTSBsJbJoHyFKgIr-b5xSAu-CO9pgE3bCebLGAWCVDnPg/exec?page=logo";
 
+  fetch(webAppUrl)
+    .then(response => response.text())
+    .then(url => {
+      const logoEl = document.getElementById("logo");
+      logoEl.src = url;
+      // Affiche uniquement quand l'image est chargée
+      logoEl.onload = () => {
+        logoEl.style.display = "block";
+      };
+    })
+    .catch(err => console.error("Erreur lors du chargement du logo :", err));
+</script>
 
 
 
 </body>
 </html>
+
 
 
 
